syntax = "proto3";

package sgenetwork.sge.rewards;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "sge/rewards/params.proto";
import "sge/rewards/reward.proto";

option go_package = "github.com/sge-network/sge/x/rewards/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/sge-network/sge/rewards/params";
  
  }
  
  // Queries a list of RewardByIncentiveId items.
  rpc RewardByIncentiveId (QueryRewardByIncentiveIdRequest) returns (QueryRewardByIncentiveIdResponse) {
    option (google.api.http).get = "/sge-network/sge/rewards/reward_by_incentive_id";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {
}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryRewardByIncentiveIdRequest {
  string incentiveId = 1;
}

message QueryRewardByIncentiveIdResponse {
  repeated RewardK rewards = 1;
}
